--- a/patches/imx6ull-var-som-concerto-board-emmc-wifi.dts
+++ b/patches/imx6ull-var-som-concerto-board-emmc-wifi.dts
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2024 Variscite Ltd. - https://www.variscite.com
+ * Copyright (C) 2019 Variscite Ltd. - https://www.variscite.com
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 as
@@ -17,13 +17,13 @@
 #include "imx6ull-var-som-concerto-board.dtsi"
 
 / {
-	model = "Variscite VAR-SOM-6UL with i.MX6ULL, eMMC, WiFi & WM8904 support on Concerto-Board";
+	model = "Variscite VAR-SOM-6UL with i.MX6ULL, eMMC & WiFi support on Concerto-Board";
 	compatible = "variscite,imx6ul-var-som", "fsl,imx6ull";
 
     /* MPC changes*/
     /delete-node/ pinctrl_gpio_leds;
     /delete-node/ leds;
-	
+
     /delete-node/ pinctrl_lcdif_ctrl;
     /delete-node/ pinctrl_lcdif_dat;
     /delete-node/ lcdif;
@@ -40,17 +40,17 @@
     /delete-node/ pinctrl_pwm4;
     /delete-node/ pwm4;
 
-	/delete-node/ pinctrl_tsc;
+    /delete-node/ pinctrl_tsc;
     /delete-node/ tsc;
 
     /delete-node/ backlight;
 
-     /delete-node/ pinctrl_gpio_keys;
+    /delete-node/ pinctrl_gpio_keys;
     /delete-node/ pinctrl_gpio_keys_snvs;
     /delete-node/ back;
     /delete-node/ wakeup;
     /delete-node/ keys;
-	
+
     run-control {
         compatible = "gpio-leds";
         pinctrl-names = "default";
@@ -115,7 +115,7 @@
         led_b {
             gpios = <&gpio4 14 GPIO_ACTIVE_HIGH>;
             default-state = "off";
-         };
+        };
     };
 
     extra-gpios {
@@ -130,43 +130,45 @@
         pinctrl-0 = <&pinctrl_w1>;
         gpios = <&gpio1 28 GPIO_ACTIVE_HIGH>;
     };
+
 };
 
 /* MPC changes*/
 &can1 {
-       status = "disabled";
+	status = "disabled";
 };
 
 &usbotg1 {
-       status = "disabled";
+	status = "disabled";
 };
 
 &i2c1 {
-       status = "disabled";
+	status = "disabled";
 };
 
 &iomuxc {
     pinctrl_uart3: uart3grp {
         fsl,pins = <
-            MX6UL_PAD_UART3_TX_DATA__UART3_DCE_TX      0x1b0b1
-            MX6UL_PAD_UART3_RX_DATA__UART3_DCE_RX      0x1b0b1
-            // MX6UL_PAD_UART3_CTS_B__GPIO1_IO26       0x1b0b1
-            MX6UL_PAD_UART3_RTS_B__GPIO1_IO27      0x130b1
+            MX6UL_PAD_UART3_TX_DATA__UART3_DCE_TX	0x1b0b1
+            MX6UL_PAD_UART3_RX_DATA__UART3_DCE_RX	0x1b0b1
+            // MX6UL_PAD_UART3_CTS_B__GPIO1_IO26	0x1b0b1
+            MX6UL_PAD_UART3_RTS_B__GPIO1_IO27	    0x130b1
         >;
     };
 
     pinctrl_uart6: uart6grp {
         fsl,pins = <
-            MX6UL_PAD_CSI_MCLK__UART6_DCE_TX   0x1b0b1
-            MX6UL_PAD_CSI_PIXCLK__UART6_DCE_RX 0x1b0b1
-            // MX6UL_PAD_NAND_CE1_B__GPIO4_IO14        0x1b0b1
-            MX6UL_PAD_UART5_TX_DATA__GPIO1_IO30        0x130b1
+            MX6UL_PAD_CSI_MCLK__UART6_DCE_TX	0x1b0b1
+            MX6UL_PAD_CSI_PIXCLK__UART6_DCE_RX	0x1b0b1
+            // MX6UL_PAD_NAND_CE1_B__GPIO4_IO14	0x1b0b1
+            MX6UL_PAD_UART5_TX_DATA__GPIO1_IO30	0x130b1
         >;
     };
-	pinctrl_adc1: adc1grp {
+
+    pinctrl_adc1: adc1grp {
 		fsl,pins = <
 			MX6UL_PAD_GPIO1_IO01__GPIO1_IO01 0xb0
-			MX6UL_PAD_GPIO1_IO04__GPIO1_IO04 0xb0
+            MX6UL_PAD_GPIO1_IO04__GPIO1_IO04 0xb0
 		>;
 	};
 
@@ -179,12 +181,9 @@
 			MX6UL_PAD_LCD_DATA20__GPIO3_IO25 0x1b0b0
 			MX6UL_PAD_LCD_DATA13__GPIO3_IO18 0x1b0b0
 			MX6UL_PAD_GPIO1_IO02__GPIO1_IO02 0x1b0b0
-			MX6ULL_PAD_SNVS_TAMPER9__GPIO5_IO09 0x1b0b0
 			MX6UL_PAD_LCD_DATA02__GPIO3_IO07 0x1b0b0
-			MX6UL_PAD_SNVS_TAMPER7__GPIO5_IO07 0x1b0b0
-			MX6UL_PAD_SNVS_TAMPER3__GPIO5_IO03 0x1b0b0
 			MX6UL_PAD_CSI_DATA02__GPIO4_IO23 0x1b0b0
-			MX6UL_PAD_LCD_DATA01__GPIO3_IO06 0x1b0b0
+            MX6UL_PAD_LCD_DATA01__GPIO3_IO06 0x1b0b0
             MX6UL_PAD_LCD_DATA00__GPIO3_IO05 0x1b0b0
             MX6UL_PAD_NAND_CE1_B__GPIO4_IO14 0x1b0b0
 		>;
@@ -193,18 +192,25 @@
     pinctrl_java_extra_gpio: javaextragpiogrp {
 		fsl,pins = <
 			MX6UL_PAD_GPIO1_IO05__GPIO1_IO05 0x1b0b0
+            MX6UL_PAD_CSI_DATA06__GPIO4_IO27 0x1b0b0
+            MX6UL_PAD_CSI_DATA04__GPIO4_IO25 0x1b0b0
+            MX6UL_PAD_CSI_DATA05__GPIO4_IO26 0x1b0b0
+            MX6UL_PAD_CSI_DATA07__GPIO4_IO28 0x1b0b0
 		>;
-	};	
+	};
+
     pinctrl_java_enet2_gpio: javaenet2_gpiogrp {
         fsl,pins = <
             MX6UL_PAD_UART5_RX_DATA__GPIO1_IO31	0x1b0b0 /* fec2 reset */
         >;
     };
-	pinctrl_w1: w1grp {
+
+    pinctrl_w1: w1grp {
         fsl,pins = <
             MX6UL_PAD_UART4_TX_DATA__GPIO1_IO28   0x0c0b0
        >;
     };
+
 };
 
 /* SVNS pad needs to be configured in iomuxc_snvs */
@@ -224,7 +230,7 @@
 	phy-reset-gpios=<&gpio1 31 GPIO_ACTIVE_LOW>;
 };
 
-/* wdog to avoid conflicts with ADC Pin */
+/* wdog to avoid confclicts with ADC Pin */
 &wdog1 {
     /delete-property/ pinctrl-names;
     /delete-property/ pinctrl-0;
@@ -233,24 +239,23 @@
 
 /* ttymxc2 UART */
 &uart3 {
-       pinctrl-names = "default";
-       pinctrl-0 = <&pinctrl_uart3>;
-       fsl,uart-has-rtscts;
-       linux,rs485-enabled-at-boot-time;
-       rs485-rts-active-high;
-       status = "okay";
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_uart3>;
+	fsl,uart-has-rtscts;
+	linux,rs485-enabled-at-boot-time;
+	rs485-rts-active-high;
+	status = "okay";
 };
 
 /* ttymxc5 UART */
 &uart6 {
-       pinctrl-names = "default";
-       pinctrl-0 = <&pinctrl_uart6>;
-       fsl,uart-has-rtscts;
-       linux,rs485-enabled-at-boot-time;
-       rs485-rts-active-high;
-       status = "okay";
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_uart6>;
+	fsl,uart-has-rtscts;
+	linux,rs485-enabled-at-boot-time;
+	rs485-rts-active-high;
+	status = "okay";
 };
-
 
 /* Condifgured ADC on GPIO1_IO1 */
 &adc1 {
@@ -260,7 +265,6 @@
 	num-channels = <10>;
 	status = "okay";
 };
-
 
 /* Disabled to avoid conflicts with GPIO3_IO07, GPIO3_IO09, GPIO3_IO08, GPIO3_IO17, GPIO3_IO25, GPIO3_IO18 */
 &lcdif {
