--- a/patches/imx6ull-var-som-concerto-board-emmc-wifi.dts
+++ b/patches/imx6ull-var-som-concerto-board-emmc-wifi.dts
@@ -76,7 +76,7 @@
             gpios = <&gpio3 25 GPIO_ACTIVE_HIGH>;
             default-state = "off";
         };
-        aqi_ls {
+        wifi_ls {
             gpios = <&gpio3 18 GPIO_ACTIVE_HIGH>;
             default-state = "off";
         };
@@ -116,11 +116,21 @@
             gpios = <&gpio4 14 GPIO_ACTIVE_HIGH>;
             default-state = "off";
         };
+		aqi_ls {
+            gpios = <&gpio1 5 GPIO_ACTIVE_HIGH>;
+            default-state = "off";
+        };
     };
 
     extra-gpios {
         pinctrl-names = "default";
         pinctrl-0 = <&pinctrl_java_extra_gpio>;
+		status = "okay";
+    };
+
+	hw-ids {
+        pinctrl-names = "default";
+        pinctrl-0 = <&pinctrl_java_hw_ids>;
 		status = "okay";
     };
 
@@ -156,6 +166,14 @@
         >;
     };
 
+	pinctrl_uart4: uart4grp {
+        fsl,pins = <
+            MX6UL_PAD_LCD_CLK__UART4_DCE_TX	0x1b0b1
+            MX6UL_PAD_LCD_ENABLE__UART4_DCE_RX	0x1b0b1
+            MX6UL_PAD_LCD_HSYNC__GPIO3_IO02     0x130b1
+        >;
+    };
+
     pinctrl_uart6: uart6grp {
         fsl,pins = <
             MX6UL_PAD_CSI_MCLK__UART6_DCE_TX	0x1b0b1
@@ -168,7 +186,6 @@
     pinctrl_adc1: adc1grp {
 		fsl,pins = <
 			MX6UL_PAD_GPIO1_IO01__GPIO1_IO01 0xb0
-            MX6UL_PAD_GPIO1_IO04__GPIO1_IO04 0xb0
 		>;
 	};
 
@@ -186,16 +203,24 @@
             MX6UL_PAD_LCD_DATA01__GPIO3_IO06 0x1b0b0
             MX6UL_PAD_LCD_DATA00__GPIO3_IO05 0x1b0b0
             MX6UL_PAD_NAND_CE1_B__GPIO4_IO14 0x1b0b0
+			MX6UL_PAD_GPIO1_IO05__GPIO1_IO05 0x1b0b0
 		>;
 	};
 
     pinctrl_java_extra_gpio: javaextragpiogrp {
 		fsl,pins = <
-			MX6UL_PAD_GPIO1_IO05__GPIO1_IO05 0x1b0b0
             MX6UL_PAD_CSI_DATA06__GPIO4_IO27 0x1b0b0
             MX6UL_PAD_CSI_DATA04__GPIO4_IO25 0x1b0b0
             MX6UL_PAD_CSI_DATA05__GPIO4_IO26 0x1b0b0
             MX6UL_PAD_CSI_DATA07__GPIO4_IO28 0x1b0b0
+		>;
+	};
+
+	pinctrl_java_hw_ids: javahwidsgrp {
+		fsl,pins = <
+            MX6UL_PAD_LCD_DATA14__GPIO3_IO19 0x1b0b0
+            MX6UL_PAD_LCD_DATA15__GPIO3_IO20 0x1b0b0
+            MX6UL_PAD_LCD_DATA18__GPIO3_IO23 0x1b0b0
 		>;
 	};
 
@@ -241,6 +266,16 @@
 &uart3 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_uart3>;
+	fsl,uart-has-rtscts;
+	linux,rs485-enabled-at-boot-time;
+	rs485-rts-active-high;
+	status = "okay";
+};
+
+/* ttymxc3 UART */
+&uart4 {
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_uart4>;
 	fsl,uart-has-rtscts;
 	linux,rs485-enabled-at-boot-time;
 	rs485-rts-active-high;
